// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.getConfig allenv.json and allenv_test.json must return the production allenv test 1`] = `
Object {
  "a": "b",
  "c": "W",
}
`;

exports[`.getConfig allenv.json and allenv_test.json must return the same data to all environments 1`] = `
Object {
  "a": "b",
  "c": "d",
}
`;

exports[`.getConfig allenv.json and allenv_test.json must return the same data to all environments 2`] = `
Object {
  "a": "b",
  "c": "d",
}
`;

exports[`.getConfig allenv.json and allenv_test.json must return the same data to all environments 3`] = `
Object {
  "a": "b",
  "c": "d",
}
`;

exports[`.getConfig allenv.json and allenv_test.json must return the staging allenv test 1`] = `
Object {
  "a": "J",
  "c": "d",
  "w": "x",
}
`;

exports[`.getConfig checkout.json and checkout_bkbe.json must return the default config by name 1`] = `
Object {
  "klarna": Object {
    "active": false,
    "baseUri": "https://checkout.klarna.com",
    "confirmationUri": "/checkout/klarna/confirmation.html",
    "contentType": "application/vnd.klarna.checkout.aggregated-order-v2+json",
    "fetchUri": "/checkout/orders/",
    "merchantId": "2468",
    "ordersName": "klarna_checkout",
    "pushUri": "/checkout/klarna/confirm/klarnacheckout?klarna_order={checkout.order.uri}",
    "sharedSecret": "ryckZqFxB75WQ3o",
  },
  "payment": Object {
    "billpay": Object {
      "active": true,
      "label": true,
      "position": "4",
      "symbol": "billpay",
    },
    "billpay_invoice": Object {
      "active": true,
      "label": true,
      "position": 3,
      "symbol": "billpay",
    },
    "billpay_paylater": Object {
      "active": true,
      "label": true,
      "position": 5,
      "symbol": "paylater",
    },
    "cash_on_delivery": Object {
      "active": true,
      "label": true,
      "position": 9,
      "symbol": "cash_on_delivery",
    },
    "creditcard": Object {
      "active": true,
      "config": Object {
        "availableTypes": Array [
          "visa",
          "mastercard",
        ],
      },
      "label": true,
      "position": 2,
      "symbol": "creditcard",
    },
    "directtransfer": Object {
      "active": true,
      "position": 6,
      "symbol": "directtransfer",
    },
    "ideal": Object {
      "active": false,
      "position": 17,
      "symbol": "ideal",
    },
    "klarna_finance": Object {
      "active": false,
      "label": true,
      "position": 16,
      "symbol": "klarna",
    },
    "klarna_invoice": Object {
      "active": false,
      "label": true,
      "position": 15,
      "symbol": "klarna",
    },
    "moneyorder": Object {
      "active": true,
      "label": true,
      "position": 7,
      "symbol": "moneyorder",
    },
    "paypal": Object {
      "active": true,
      "position": 1,
      "symbol": "paypal",
    },
    "santander": Object {
      "active": false,
      "position": 8,
      "symbol": "",
    },
    "voucherPayment": Object {
      "active": true,
      "label": true,
      "position": 12,
      "symbol": "voucher",
    },
  },
  "stepStyle": "multi",
  "stepperNav": true,
  "steps": Object {
    "0": Object {
      "inNav": false,
      "name": "Cart",
      "pay": false,
    },
    "1": Object {
      "inNav": false,
      "loggedIn": Object {
        "id": "1",
        "inNav": true,
        "label": "checkout_address",
        "name": "Address",
      },
      "name": "Step1",
      "pay": false,
    },
    "2": Object {
      "id": "2",
      "inNav": true,
      "label": "checkout_payment",
      "name": "Payment",
      "pay": true,
    },
    "3": Object {
      "id": "3",
      "inNav": true,
      "label": "checkout_overview",
      "name": "Overview",
      "pay": false,
    },
    "4": Object {
      "inNav": false,
      "name": "Confirmation",
      "pay": false,
    },
  },
}
`;

exports[`.getConfig checkout.json and checkout_bkbe.json must return the merge staging and production checkout bkbe 1`] = `
Object {
  "klarna": Object {
    "active": false,
    "baseUri": "https://checkout.testdrive.klarna.com",
    "confirmationUri": "/checkout/klarna/confirmation.html",
    "contentType": "application/vnd.klarna.checkout.aggregated-order-v2+json",
    "fetchUri": "/checkout/orders/",
    "merchantId": "2468",
    "ordersName": "klarna_checkout",
    "pushUri": "/checkout/klarna/confirm/klarnacheckout?klarna_order={checkout.order.uri}",
    "sharedSecret": "ryckZqFxB75WQ3o",
  },
  "payment": Object {
    "billpay": Object {
      "active": false,
      "label": true,
      "position": "4",
      "symbol": "billpay",
    },
    "billpay_invoice": Object {
      "active": false,
      "label": true,
      "position": 3,
      "symbol": "billpay",
    },
    "billpay_paylater": Object {
      "active": false,
      "label": true,
      "position": 5,
      "symbol": "paylater",
    },
    "cash_on_delivery": Object {
      "active": false,
      "label": true,
      "position": 9,
      "symbol": "cash_on_delivery",
    },
    "creditcard": Object {
      "active": true,
      "config": Object {
        "availableTypes": Array [
          "visa",
          "mastercard",
        ],
      },
      "label": true,
      "position": 2,
      "symbol": "creditcard",
    },
    "directtransfer": Object {
      "active": false,
      "position": 6,
      "symbol": "directtransfer",
    },
    "ideal": Object {
      "active": false,
      "position": 17,
      "symbol": "ideal",
    },
    "klarna_finance": Object {
      "active": false,
      "label": true,
      "position": 16,
      "symbol": "klarna",
    },
    "klarna_invoice": Object {
      "active": false,
      "label": true,
      "position": 15,
      "symbol": "klarna",
    },
    "moneyorder": Object {
      "active": true,
      "label": true,
      "position": 7,
      "symbol": "moneyorder",
    },
    "paypal": Object {
      "active": true,
      "position": 1,
      "symbol": "paypal",
    },
    "santander": Object {
      "active": false,
      "position": 8,
      "symbol": "",
    },
    "voucherPayment": Object {
      "active": true,
      "label": true,
      "position": 12,
      "symbol": "voucher",
    },
  },
  "stepStyle": "multi",
  "stepperNav": true,
  "steps": Object {
    "0": Object {
      "inNav": false,
      "name": "Cart",
      "pay": false,
    },
    "1": Object {
      "inNav": false,
      "loggedIn": Object {
        "id": "1",
        "inNav": true,
        "label": "checkout_address",
        "name": "Address",
      },
      "name": "Step1",
      "pay": false,
    },
    "2": Object {
      "id": "2",
      "inNav": true,
      "label": "checkout_payment",
      "name": "Payment",
      "pay": true,
    },
    "3": Object {
      "id": "3",
      "inNav": true,
      "label": "checkout_overview",
      "name": "Overview",
      "pay": false,
    },
    "4": Object {
      "inNav": false,
      "name": "Confirmation",
      "pay": false,
    },
  },
}
`;

exports[`.getConfig checkout.json and checkout_bkbe.json must return the site bkbe merged with the default checkout 1`] = `
Object {
  "klarna": Object {
    "active": false,
    "baseUri": "https://checkout.klarna.com",
    "confirmationUri": "/checkout/klarna/confirmation.html",
    "contentType": "application/vnd.klarna.checkout.aggregated-order-v2+json",
    "fetchUri": "/checkout/orders/",
    "merchantId": "2468",
    "ordersName": "klarna_checkout",
    "pushUri": "/checkout/klarna/confirm/klarnacheckout?klarna_order={checkout.order.uri}",
    "sharedSecret": "ryckZqFxB75WQ3o",
  },
  "payment": Object {
    "billpay": Object {
      "active": false,
      "label": true,
      "position": "4",
      "symbol": "billpay",
    },
    "billpay_invoice": Object {
      "active": false,
      "label": true,
      "position": 3,
      "symbol": "billpay",
    },
    "billpay_paylater": Object {
      "active": false,
      "label": true,
      "position": 5,
      "symbol": "paylater",
    },
    "cash_on_delivery": Object {
      "active": false,
      "label": true,
      "position": 9,
      "symbol": "cash_on_delivery",
    },
    "creditcard": Object {
      "active": true,
      "config": Object {
        "availableTypes": Array [
          "visa",
          "mastercard",
        ],
      },
      "label": true,
      "position": 2,
      "symbol": "creditcard",
    },
    "directtransfer": Object {
      "active": false,
      "position": 6,
      "symbol": "directtransfer",
    },
    "ideal": Object {
      "active": false,
      "position": 17,
      "symbol": "ideal",
    },
    "klarna_finance": Object {
      "active": false,
      "label": true,
      "position": 16,
      "symbol": "klarna",
    },
    "klarna_invoice": Object {
      "active": false,
      "label": true,
      "position": 15,
      "symbol": "klarna",
    },
    "moneyorder": Object {
      "active": true,
      "label": true,
      "position": 7,
      "symbol": "moneyorder",
    },
    "paypal": Object {
      "active": true,
      "position": 1,
      "symbol": "paypal",
    },
    "santander": Object {
      "active": false,
      "position": 8,
      "symbol": "",
    },
    "voucherPayment": Object {
      "active": true,
      "label": true,
      "position": 12,
      "symbol": "voucher",
    },
  },
  "stepStyle": "multi",
  "stepperNav": true,
  "steps": Object {
    "0": Object {
      "inNav": false,
      "name": "Cart",
      "pay": false,
    },
    "1": Object {
      "inNav": false,
      "loggedIn": Object {
        "id": "1",
        "inNav": true,
        "label": "checkout_address",
        "name": "Address",
      },
      "name": "Step1",
      "pay": false,
    },
    "2": Object {
      "id": "2",
      "inNav": true,
      "label": "checkout_payment",
      "name": "Payment",
      "pay": true,
    },
    "3": Object {
      "id": "3",
      "inNav": true,
      "label": "checkout_overview",
      "name": "Overview",
      "pay": false,
    },
    "4": Object {
      "inNav": false,
      "name": "Confirmation",
      "pay": false,
    },
  },
}
`;

exports[`.getConfig config.yml and config_bkbe.yml must return the bkbe config merged with the default config 1`] = `
Object {
  "additional_info": null,
  "checkout2": Object {
    "enabled": true,
    "klarna": false,
  },
  "colors": Object {
    "DE": Array [
      "beige",
      "gelb",
      "grau",
      "grün",
      "orange",
      "pink",
      "braun",
      "rot",
      "lila",
      "blau",
      "weiß",
      "schwarz",
      "transparent",
      "oliv",
      "türkis",
      "gold",
      "silber",
      "bunt",
      "petrol",
      "test",
    ],
    "DK": Array [
      "beige",
      "gul",
      "grå",
      "grøn",
      "orange",
      "pink",
      "brun",
      "rød",
      "violet",
      "blå",
      "hvid",
      "sort",
      "gennemsigtig",
      "oliven",
      "turkis",
      "guld",
      "sølv",
      "farverig",
      "petroleumsgrøn",
    ],
    "EN": Array [
      "beige",
      "yellow",
      "grey",
      "green",
      "orange",
      "pink",
      "brown",
      "red",
      "purple",
      "blue",
      "white",
      "black",
      "transparent",
      "olive",
      "turquoise",
      "gold",
      "silver",
      "colourful",
      "teal",
    ],
    "ES": Array [
      "beige",
      "amarillo",
      "gris",
      "verde",
      "naranja",
      "rosa",
      "marrón",
      "rojo",
      "violeta",
      "azul",
      "blanco",
      "negro",
      "transparente",
      "Oliva",
      "Turquesa",
      "Dorado",
      "Plateado",
      "Multicolor",
      "Azul petróleo",
    ],
    "FI": Array [
      "beige",
      "keltainen",
      "harmaa",
      "vihreä",
      "oranssi",
      "vaaleanpunainen",
      "ruskea",
      "punainen",
      "violetti",
      "sininen",
      "valkoinen",
      "musta",
      "läpinäkyvä",
      "oliivi",
      "turkoosi",
      "kulta",
      "hopea",
      "monivärinen",
      "petrooli",
    ],
    "FR": Array [
      "beige",
      "jaune",
      "gris",
      "vert",
      "orange",
      "rose",
      "marron",
      "rouge",
      "violet",
      "bleu",
      "blanc",
      "noir",
      "transparent",
      "olive",
      "turquoise",
      "Or",
      "argent",
      "Multicol",
      "ore",
      "Bleu pétrole",
    ],
    "IT": Array [
      "beige",
      "giallo",
      "grigio",
      "verde",
      "arancione",
      "rosa",
      "marrone",
      "rosso",
      "viola",
      "blu",
      "bianco",
      "nero",
      "trasparente",
      "verde oliva",
      "turchese",
      "oro",
      "argento",
      "colorato",
      "petrolio",
    ],
    "NL": Array [
      "beige",
      "geel",
      "grijs",
      "groen",
      "oranje",
      "roze",
      "bruin",
      "rood",
      "violet",
      "blauw",
      "wit",
      "zwart",
      "transparant",
      "olijf",
      "turquoise",
      "goud",
      "zilver",
      "bont",
      "petrol",
    ],
    "NO": Array [
      "beige",
      "Gul",
      "Grå",
      "Grønn",
      "Orange",
      "Rosa",
      "Brun",
      "rød",
      "lilla",
      "Blå",
      "Hvit",
      "Svart",
      "Transparent",
      "oliven",
      "turkis",
      "gull",
      "sølv",
      "Fargerik",
      "Bensin",
    ],
    "PL": Array [
      "beige",
      "żółty",
      "szary",
      "zielony",
      "pomarańczowy",
      "różowy",
      "brązowy",
      "czerwony",
      "fioletowy",
      "niebieski",
      "biały",
      "czarny",
      "przezroczysty",
      "oliwkowy",
      "turkusowy",
      "złoty",
      "srebrny",
      "kolorowy",
      "petrol",
    ],
    "SV": Array [
      "beige",
      "gelb",
      "grå",
      "grön",
      "orange",
      "pink",
      "brun",
      "röd",
      "violett",
      "lila",
      "blå",
      "vit",
      "svart",
      "transparent",
      "färglös",
      "oliv",
      "turkos",
      "guld",
      "silver",
      "flerfärgad",
      "Petrol",
    ],
  },
  "country": Object {
    "105": Object {
      "addressFormatId": 6,
      "countryName": "Ireland",
      "isoCode2": "IE",
      "isoCode3": "IRL",
      "taxRates": Object {
        "1": 23,
        "2": 13.5,
      },
    },
    "107": Object {
      "addressFormatId": 1,
      "countryName": "Italia",
      "isoCode2": "IT",
      "isoCode3": "ITA",
      "taxRates": Object {
        "1": 20,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "124": Object {
      "addressFormatId": 1,
      "countryName": "Luxemburg",
      "isoCode2": "LU",
      "isoCode3": "LUX",
      "taxRates": Object {
        "1": 19,
        "2": 7,
      },
      "zipRegexPattern": "^(L\\\\s*(-|—|–))\\\\s*?[\\\\d]{4}$",
    },
    "14": Object {
      "addressFormatId": 5,
      "countryName": "Österreich",
      "isoCode2": "AT",
      "isoCode3": "AUT",
      "taxRates": Object {
        "1": 20,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "150": Object {
      "addressFormatId": 1,
      "countryName": "Niederlande",
      "isoCode2": "NL",
      "isoCode3": "NLD",
      "taxRates": Object {
        "1": 21,
        "2": 6,
      },
      "zipRegexPattern": "^[1-9][0-9]{3}\\\\s?[a-zA-Z]{2}$",
    },
    "160": Object {
      "addressFormatId": 1,
      "countryName": "Norge",
      "isoCode2": "NO",
      "isoCode3": "NOR",
      "taxRates": Object {
        "1": 25,
        "2": 12,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "173": Object {
      "addressFormatId": 5,
      "countryName": "Polen",
      "isoCode2": "PL",
      "isoCode3": "POL",
      "taxRates": Object {
        "1": 23,
        "2": 8,
      },
      "zipRegexPattern": "^[0-9]{2}-[0-9]{3}$",
    },
    "195": Object {
      "addressFormatId": 5,
      "countryName": "Spanien",
      "isoCode2": "ES",
      "isoCode3": "ESP",
      "taxRates": Object {
        "1": 21,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "203": Object {
      "addressFormatId": 1,
      "countryName": "Schweden",
      "isoCode2": "SE",
      "isoCode3": "SWE",
      "taxRates": Object {
        "1": 25,
        "2": 12,
      },
      "zipRegexPattern": "^\\\\d{3}\\\\s?\\\\d{2}$",
    },
    "204": Object {
      "addressFormatId": 5,
      "countryName": "Schweiz",
      "isoCode2": "CH",
      "isoCode3": "CHE",
      "taxRates": Object {
        "1": 8,
        "2": 2.5,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "21": Object {
      "addressFormatId": 5,
      "countryName": "België",
      "isoCode2": "BE",
      "isoCode3": "BEL",
      "taxRates": Object {
        "1": 21,
        "2": 6,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "222": Object {
      "addressFormatId": 5,
      "countryName": "United Kingdom",
      "isoCode2": "GB",
      "isoCode3": "GBR",
      "taxRates": Object {
        "1": 20,
        "2": 5,
      },
      "zipRegexPattern": "^[a-zA-Z]{1}[0-9a-zA-z]{1,3} [0-9]{1}[a-zA-Z]{2}",
    },
    "57": Object {
      "addressFormatId": 1,
      "countryName": "Daenemark",
      "isoCode2": "DK",
      "isoCode3": "DNK",
      "taxRates": Object {
        "1": 25,
        "2": 25,
      },
      "zipRegexPattern": "^[0-9]{3,4}$",
    },
    "72": Object {
      "addressFormatId": 1,
      "countryName": "Finnland",
      "isoCode2": "FI",
      "isoCode3": "FIN",
      "taxRates": Object {
        "1": 24,
        "2": 14,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "73": Object {
      "addressFormatId": 1,
      "countryName": "Frankreich",
      "isoCode2": "FR",
      "isoCode3": "FRA",
      "taxRates": Object {
        "1": 19.6,
        "2": 5.5,
      },
      "zipRegexPattern": "^(F-)?((2[A|B])|[0-9]{2})[0-9]{3}$",
    },
    "81": Object {
      "addressFormatId": 5,
      "countryName": "Deutschland",
      "isoCode2": "DE",
      "isoCode3": "DEU",
      "taxRates": Object {
        "1": 19,
        "2": 7,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
  },
  "currency": Object {
    "class": "euro",
    "code": "EUR",
    "decimal_separator": ",",
    "decimals": 2,
    "euro_conversion_factor": 1,
    "positionSymbol": 0,
    "prefix": "EUR",
    "round": "math",
    "suffix": ",-",
    "symbol": "€",
    "text": "EUR",
    "thousand_separator": "",
    "value": 1,
  },
  "googleSiteVerification": "yBAco_6L0d1XISkO-SFPmffmeXzrDiNJdsycoCxoYEA",
  "insurance": Object {
    "enabled": false,
    "excluded_group_ids": Array [
      5121,
      53,
      468,
      383,
      384,
      512,
      392,
      393,
    ],
  },
  "moneyOrderInformation": Object {
    "bank": "Südwestbank AG Stuttgart",
    "bic": "SWBSDESSXXX",
    "iban": "DE79600907000640267041",
    "payee": "Internetstores GmbH",
    "reference": "Order number",
  },
  "newsletter": Object {
    "interestsCount": 10,
  },
  "packstations": Object {
    "enabled": false,
  },
  "productPriceReduction": Object {
    "reductionPercentMinimumThreshold": 3,
    "reductionPercentShowingThreshold": 10,
  },
  "product_max_add_to_cart": 99,
  "product_new": Object {
    "badge_new_time": 2419200,
  },
  "show_sold_out_in_category": Array [
    1,
    5,
    9,
    19,
    33,
    39,
  ],
  "warranty": Object {
    "carbonBikes": Array [
      366645,
      366644,
      366643,
      387207,
      387208,
      387209,
      387210,
      469447,
      469448,
      469449,
      469450,
      469451,
    ],
  },
}
`;

exports[`.getConfig config.yml and config_bkbe.yml must return the default config by name 1`] = `
Object {
  "additional_info": null,
  "checkout2": Object {
    "enabled": true,
    "klarna": false,
  },
  "colors": Object {
    "DE": Array [
      "beige",
      "gelb",
      "grau",
      "grün",
      "orange",
      "pink",
      "braun",
      "rot",
      "lila",
      "blau",
      "weiß",
      "schwarz",
      "transparent",
      "oliv",
      "türkis",
      "gold",
      "silber",
      "bunt",
      "petrol",
    ],
    "DK": Array [
      "beige",
      "gul",
      "grå",
      "grøn",
      "orange",
      "pink",
      "brun",
      "rød",
      "violet",
      "blå",
      "hvid",
      "sort",
      "gennemsigtig",
      "oliven",
      "turkis",
      "guld",
      "sølv",
      "farverig",
      "petroleumsgrøn",
    ],
    "EN": Array [
      "beige",
      "yellow",
      "grey",
      "green",
      "orange",
      "pink",
      "brown",
      "red",
      "purple",
      "blue",
      "white",
      "black",
      "transparent",
      "olive",
      "turquoise",
      "gold",
      "silver",
      "colourful",
      "teal",
    ],
    "ES": Array [
      "beige",
      "amarillo",
      "gris",
      "verde",
      "naranja",
      "rosa",
      "marrón",
      "rojo",
      "violeta",
      "azul",
      "blanco",
      "negro",
      "transparente",
      "Oliva",
      "Turquesa",
      "Dorado",
      "Plateado",
      "Multicolor",
      "Azul petróleo",
    ],
    "FI": Array [
      "beige",
      "keltainen",
      "harmaa",
      "vihreä",
      "oranssi",
      "vaaleanpunainen",
      "ruskea",
      "punainen",
      "violetti",
      "sininen",
      "valkoinen",
      "musta",
      "läpinäkyvä",
      "oliivi",
      "turkoosi",
      "kulta",
      "hopea",
      "monivärinen",
      "petrooli",
    ],
    "FR": Array [
      "beige",
      "jaune",
      "gris",
      "vert",
      "orange",
      "rose",
      "marron",
      "rouge",
      "violet",
      "bleu",
      "blanc",
      "noir",
      "transparent",
      "olive",
      "turquoise",
      "Or",
      "argent",
      "Multicol",
      "ore",
      "Bleu pétrole",
    ],
    "IT": Array [
      "beige",
      "giallo",
      "grigio",
      "verde",
      "arancione",
      "rosa",
      "marrone",
      "rosso",
      "viola",
      "blu",
      "bianco",
      "nero",
      "trasparente",
      "verde oliva",
      "turchese",
      "oro",
      "argento",
      "colorato",
      "petrolio",
    ],
    "NL": Array [
      "beige",
      "geel",
      "grijs",
      "groen",
      "oranje",
      "roze",
      "bruin",
      "rood",
      "violet",
      "blauw",
      "wit",
      "zwart",
      "transparant",
      "olijf",
      "turquoise",
      "goud",
      "zilver",
      "bont",
      "petrol",
    ],
    "NO": Array [
      "beige",
      "Gul",
      "Grå",
      "Grønn",
      "Orange",
      "Rosa",
      "Brun",
      "rød",
      "lilla",
      "Blå",
      "Hvit",
      "Svart",
      "Transparent",
      "oliven",
      "turkis",
      "gull",
      "sølv",
      "Fargerik",
      "Bensin",
    ],
    "PL": Array [
      "beige",
      "żółty",
      "szary",
      "zielony",
      "pomarańczowy",
      "różowy",
      "brązowy",
      "czerwony",
      "fioletowy",
      "niebieski",
      "biały",
      "czarny",
      "przezroczysty",
      "oliwkowy",
      "turkusowy",
      "złoty",
      "srebrny",
      "kolorowy",
      "petrol",
    ],
    "SV": Array [
      "beige",
      "gelb",
      "grå",
      "grön",
      "orange",
      "pink",
      "brun",
      "röd",
      "violett",
      "lila",
      "blå",
      "vit",
      "svart",
      "transparent",
      "färglös",
      "oliv",
      "turkos",
      "guld",
      "silver",
      "flerfärgad",
      "Petrol",
    ],
  },
  "country": Object {
    "105": Object {
      "addressFormatId": 6,
      "countryName": "Ireland",
      "isoCode2": "IE",
      "isoCode3": "IRL",
      "taxRates": Object {
        "1": 23,
        "2": 13.5,
      },
    },
    "107": Object {
      "addressFormatId": 1,
      "countryName": "Italia",
      "isoCode2": "IT",
      "isoCode3": "ITA",
      "taxRates": Object {
        "1": 20,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "124": Object {
      "addressFormatId": 1,
      "countryName": "Luxemburg",
      "isoCode2": "LU",
      "isoCode3": "LUX",
      "taxRates": Object {
        "1": 19,
        "2": 7,
      },
      "zipRegexPattern": "^(L\\\\s*(-|—|–))\\\\s*?[\\\\d]{4}$",
    },
    "14": Object {
      "addressFormatId": 5,
      "countryName": "Österreich",
      "isoCode2": "AT",
      "isoCode3": "AUT",
      "taxRates": Object {
        "1": 20,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "150": Object {
      "addressFormatId": 1,
      "countryName": "Niederlande",
      "isoCode2": "NL",
      "isoCode3": "NLD",
      "taxRates": Object {
        "1": 21,
        "2": 6,
      },
      "zipRegexPattern": "^[1-9][0-9]{3}\\\\s?[a-zA-Z]{2}$",
    },
    "160": Object {
      "addressFormatId": 1,
      "countryName": "Norge",
      "isoCode2": "NO",
      "isoCode3": "NOR",
      "taxRates": Object {
        "1": 25,
        "2": 12,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "173": Object {
      "addressFormatId": 5,
      "countryName": "Polen",
      "isoCode2": "PL",
      "isoCode3": "POL",
      "taxRates": Object {
        "1": 23,
        "2": 8,
      },
      "zipRegexPattern": "^[0-9]{2}-[0-9]{3}$",
    },
    "195": Object {
      "addressFormatId": 5,
      "countryName": "Spanien",
      "isoCode2": "ES",
      "isoCode3": "ESP",
      "taxRates": Object {
        "1": 21,
        "2": 10,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "203": Object {
      "addressFormatId": 1,
      "countryName": "Schweden",
      "isoCode2": "SE",
      "isoCode3": "SWE",
      "taxRates": Object {
        "1": 25,
        "2": 12,
      },
      "zipRegexPattern": "^\\\\d{3}\\\\s?\\\\d{2}$",
    },
    "204": Object {
      "addressFormatId": 5,
      "countryName": "Schweiz",
      "isoCode2": "CH",
      "isoCode3": "CHE",
      "taxRates": Object {
        "1": 8,
        "2": 2.5,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "21": Object {
      "addressFormatId": 5,
      "countryName": "Belgien",
      "isoCode2": "BE",
      "isoCode3": "BEL",
      "taxRates": Object {
        "1": 21,
        "2": 6,
      },
      "zipRegexPattern": "^[0-9]{4}$",
    },
    "222": Object {
      "addressFormatId": 5,
      "countryName": "United Kingdom",
      "isoCode2": "GB",
      "isoCode3": "GBR",
      "taxRates": Object {
        "1": 20,
        "2": 5,
      },
      "zipRegexPattern": "^[a-zA-Z]{1}[0-9a-zA-z]{1,3} [0-9]{1}[a-zA-Z]{2}",
    },
    "57": Object {
      "addressFormatId": 1,
      "countryName": "Daenemark",
      "isoCode2": "DK",
      "isoCode3": "DNK",
      "taxRates": Object {
        "1": 25,
        "2": 25,
      },
      "zipRegexPattern": "^[0-9]{3,4}$",
    },
    "72": Object {
      "addressFormatId": 1,
      "countryName": "Finnland",
      "isoCode2": "FI",
      "isoCode3": "FIN",
      "taxRates": Object {
        "1": 24,
        "2": 14,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
    "73": Object {
      "addressFormatId": 1,
      "countryName": "Frankreich",
      "isoCode2": "FR",
      "isoCode3": "FRA",
      "taxRates": Object {
        "1": 19.6,
        "2": 5.5,
      },
      "zipRegexPattern": "^(F-)?((2[A|B])|[0-9]{2})[0-9]{3}$",
    },
    "81": Object {
      "addressFormatId": 5,
      "countryName": "Deutschland",
      "isoCode2": "DE",
      "isoCode3": "DEU",
      "taxRates": Object {
        "1": 19,
        "2": 7,
      },
      "zipRegexPattern": "^[0-9]{5}$",
    },
  },
  "currency": Object {
    "class": "euro",
    "code": "EUR",
    "decimal_separator": ",",
    "decimals": 2,
    "euro_conversion_factor": 1,
    "positionSymbol": 0,
    "prefix": "EUR",
    "round": "math",
    "suffix": ",-",
    "symbol": "€",
    "text": "EUR",
    "thousand_separator": ".",
    "value": 1,
  },
  "insurance": Object {
    "enabled": false,
    "excluded_group_ids": Array [
      5121,
      53,
      468,
      383,
      384,
      512,
      392,
      393,
    ],
  },
  "newsletter": Object {
    "interestsCount": 10,
  },
  "packstations": Object {
    "enabled": false,
  },
  "productPriceReduction": Object {
    "reductionPercentMinimumThreshold": 3,
    "reductionPercentShowingThreshold": 10,
  },
  "product_max_add_to_cart": 99,
  "product_new": Object {
    "badge_new_time": 2419200,
  },
  "show_sold_out_in_category": Array [
    1,
    5,
    9,
    19,
    33,
    39,
  ],
  "warranty": Object {
    "carbonBikes": Array [
      366645,
      366644,
      366643,
      387207,
      387208,
      387209,
      387210,
      469447,
      469448,
      469449,
      469450,
      469451,
    ],
  },
}
`;

exports[`.getConfig forms_customer.yml and forms_customer_bkit.yml must return the default config by name 1`] = `
Object {
  "customerData": Array [
    Object {
      "label": "form_label_gender",
      "name": "gender",
      "required": true,
      "tabIndex": 1,
      "test": "test",
      "type": "gender",
    },
    Object {
      "constraints": Array [
        Object {
          "min": 2,
          "minMessage": "form_firstname_error",
          "type": "Length",
        },
      ],
      "label": "form_label_first_name",
      "name": "firstName",
      "required": true,
      "tabIndex": 2,
      "type": "text",
    },
    Object {
      "constraints": Array [
        Object {
          "min": 2,
          "minMessage": "form_lastname_error",
          "type": "Length",
        },
      ],
      "label": "form_label_last_name",
      "name": "lastName",
      "required": true,
      "tabIndex": 3,
      "type": "text",
    },
    Object {
      "constraints": Array [
        Object {
          "message": "form_phone_error",
          "pattern": "^[0-9\\\\-+.,/() ]{2,23}$",
          "type": "Pattern",
        },
        Object {
          "message": "form_taxnumber_error",
          "type": "CodiceFiscale",
        },
      ],
      "label": "form_label_telephone",
      "name": "telephone",
      "required": true,
      "tabIndex": 4,
      "type": "telephone",
    },
    Object {
      "label": "form_label_birthday",
      "name": "birthday",
      "required": true,
      "tabIndex": 5,
      "type": "date",
    },
  ],
  "customerEmail": Array [
    Object {
      "constraints": Array [
        Object {
          "message": "form_mail_error_notvalid",
          "type": "IsEmailValid",
        },
        Object {
          "message": "form_mail_error",
          "type": "IsBlacklisted",
        },
        Object {
          "message": "form_mail_error_alreadyused",
          "type": "IsUniqueUsername",
        },
      ],
      "label": "form_label_email_new",
      "name": "email",
      "required": true,
      "tabIndex": 6,
      "type": "email",
    },
    Object {
      "constraints": Array [
        Object {
          "message": "form_mail_error_notvalid",
          "type": "IsEmailValid",
        },
        Object {
          "message": "form_mail_error",
          "type": "IsBlacklisted",
        },
        Object {
          "message": "form_mail_error_alreadyused",
          "type": "IsUniqueUsername",
        },
      ],
      "label": "form_label_email_new_repeat",
      "name": "emailVerify",
      "required": true,
      "tabIndex": 7,
      "type": "email",
    },
  ],
  "customerForgotPassword": Array [
    Object {
      "label": "form_label_email",
      "name": "password_email",
      "required": true,
      "tabIndex": 9,
      "type": "email",
    },
  ],
  "customerLogin": Array [
    Object {
      "label": "form_label_email",
      "name": "login_email",
      "required": true,
      "tabIndex": 1,
      "type": "email",
    },
    Object {
      "label": "password_form_label",
      "name": "login_password",
      "required": true,
      "tabIndex": 2,
      "type": "password",
    },
  ],
  "customerPassword": Array [
    Object {
      "label": "customer_password_old",
      "name": "password",
      "required": true,
      "type": "password",
    },
    Object {
      "constraints": Array [
        Object {
          "message": null,
          "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
          "type": "Pattern",
        },
      ],
      "hint": "form_hint_password",
      "label": "customer_password_new",
      "name": "passwordNew",
      "required": true,
      "tabIndex": 8,
      "type": "password",
    },
  ],
  "customerRestorePassword": Array [
    Object {
      "constraints": Array [
        Object {
          "message": null,
          "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
          "type": "Pattern",
        },
      ],
      "hint": "form_hint_password",
      "label": "customer_password_new",
      "name": "password",
      "required": true,
      "tabIndex": 10,
      "type": "password",
    },
  ],
}
`;

exports[`.getConfig forms_customer.yml and forms_customer_bkit.yml must return the production checkout bkit 1`] = `
Object {
  "customerData": Array [
    Object {
      "label": "form_label_gender",
      "name": "gender",
      "required": true,
      "tabIndex": 1,
      "test": 2,
      "type": "gender",
    },
    Object {
      "constraints": Array [
        Object {
          "min": 2,
          "minMessage": "form_firstname_error",
          "type": "Length",
        },
      ],
      "label": "form_label_first_name",
      "name": "firstName",
      "required": true,
      "tabIndex": 2,
      "type": "text",
    },
    Object {
      "constraints": Array [
        Object {
          "min": 2,
          "minMessage": "form_lastname_error",
          "type": "Length",
        },
      ],
      "label": "form_label_last_name",
      "name": "lastName",
      "required": true,
      "tabIndex": 3,
      "type": "text",
    },
    Object {
      "constraints": Array [
        Object {
          "message": "form_phone_error",
          "pattern": "^[0-9\\\\-+.,/() ]{2,23}$",
          "type": "Pattern",
        },
        Object {
          "message": "form_taxnumber_error",
          "type": "CodiceFiscale",
        },
      ],
      "label": "form_label_telephone",
      "name": "telephone",
      "required": true,
      "tabIndex": 5,
      "type": "telephone",
    },
    Object {
      "label": "form_label_birthday",
      "name": "birthday",
      "required": true,
      "tabIndex": 6,
      "type": "date",
    },
    Object {
      "constraints": Array [
        Object {
          "message": "form_taxnumber_error",
          "type": "CodiceFiscale",
        },
      ],
      "label": "form_label_taxnumber",
      "name": "taxNumber",
      "required": false,
      "tabIndex": 4,
      "type": "text",
    },
  ],
  "customerEmail": Array [
    Object {
      "constraints": Array [
        Object {
          "message": "form_mail_error_notvalid",
          "type": "IsEmailValid",
        },
        Object {
          "message": "form_mail_error",
          "type": "IsBlacklisted",
        },
        Object {
          "message": "form_mail_error_alreadyused",
          "type": "IsUniqueUsername",
        },
      ],
      "label": "form_label_email_new",
      "name": "email",
      "required": true,
      "tabIndex": 6,
      "type": "email",
    },
    Object {
      "constraints": Array [
        Object {
          "message": "form_mail_error_notvalid",
          "type": "IsEmailValid",
        },
        Object {
          "message": "form_mail_error",
          "type": "IsBlacklisted",
        },
        Object {
          "message": "form_mail_error_alreadyused",
          "type": "IsUniqueUsername",
        },
      ],
      "label": "form_label_email_new_repeat",
      "name": "emailVerify",
      "required": true,
      "tabIndex": 7,
      "type": "email",
    },
  ],
  "customerForgotPassword": Array [
    Object {
      "label": "form_label_email",
      "name": "password_email",
      "required": true,
      "tabIndex": 9,
      "type": "email",
    },
  ],
  "customerLogin": Array [
    Object {
      "label": "form_label_email",
      "name": "login_email",
      "required": true,
      "tabIndex": 1,
      "type": "email",
    },
    Object {
      "label": "password_form_label",
      "name": "login_password",
      "required": true,
      "tabIndex": 2,
      "type": "password",
    },
  ],
  "customerPassword": Array [
    Object {
      "label": "customer_password_old",
      "name": "password",
      "required": true,
      "type": "password",
    },
    Object {
      "constraints": Array [
        Object {
          "message": null,
          "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
          "type": "Pattern",
        },
      ],
      "hint": "form_hint_password",
      "label": "customer_password_new",
      "name": "passwordNew",
      "required": true,
      "tabIndex": 8,
      "type": "password",
    },
  ],
  "customerRestorePassword": Array [
    Object {
      "constraints": Array [
        Object {
          "message": null,
          "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
          "type": "Pattern",
        },
      ],
      "hint": "form_hint_password",
      "label": "customer_password_new",
      "name": "password",
      "required": true,
      "tabIndex": 10,
      "type": "password",
    },
  ],
}
`;

exports[`.loadAllConfigsInFolder must load all the config files 1`] = `
Object {
  "allenv": Object {
    "defaults": Object {
      "development": Object {
        "a": "b",
        "c": "d",
      },
      "production": Object {
        "a": "b",
        "c": "d",
      },
      "staging": Object {
        "a": "b",
        "c": "d",
      },
    },
    "test": Object {
      "production": Object {
        "c": "W",
      },
      "staging": Object {
        "a": "J",
        "w": "x",
      },
    },
  },
  "checkout": Object {
    "anpl": Object {
      "production": Object {
        "payment": Object {
          "billpay": Object {
            "active": false,
            "label": true,
            "position": 4,
            "symbol": "billpay",
          },
          "billpay_invoice": Object {
            "active": false,
            "label": true,
            "position": 3,
            "symbol": "billpay",
          },
          "billpay_paylater": Object {
            "active": false,
            "label": true,
            "position": 5,
            "symbol": "paylater",
          },
          "cash_on_delivery": Object {
            "active": false,
            "label": true,
            "position": 9,
            "symbol": "cash_on_delivery",
          },
          "creditcard": Object {
            "active": true,
            "config": Object {
              "availableTypes": Array [
                "visa",
                "mastercard",
              ],
            },
            "label": true,
            "position": 2,
            "symbol": "creditcard",
          },
          "directtransfer": Object {
            "active": false,
            "position": 6,
            "symbol": "directtransfer",
          },
          "klarna_finance": Object {
            "active": false,
            "label": true,
            "position": 16,
            "symbol": "klarna",
          },
          "klarna_invoice": Object {
            "active": false,
            "label": true,
            "position": 15,
            "symbol": "klarna",
          },
          "moneyorder": Object {
            "active": false,
            "label": true,
            "position": 4,
            "symbol": "moneyorder",
          },
          "p24": Object {
            "active": true,
            "position": 1,
            "symbol": "p24",
          },
          "paypal": Object {
            "active": true,
            "position": 3,
            "symbol": "paypal",
          },
          "santander": Object {
            "active": false,
            "position": 8,
            "symbol": "",
          },
          "voucherPayment": Object {
            "active": true,
            "label": true,
            "position": 12,
            "symbol": "voucher",
          },
        },
      },
    },
    "bkbe": Object {
      "production": Object {
        "payment": Object {
          "billpay": Object {
            "active": false,
            "label": true,
            "position": "4",
            "symbol": "billpay",
          },
          "billpay_invoice": Object {
            "active": false,
            "label": true,
            "position": 3,
            "symbol": "billpay",
          },
          "billpay_paylater": Object {
            "active": false,
            "label": true,
            "position": 5,
            "symbol": "paylater",
          },
          "cash_on_delivery": Object {
            "active": false,
            "label": true,
            "position": 9,
            "symbol": "cash_on_delivery",
          },
          "creditcard": Object {
            "active": true,
            "config": Object {
              "availableTypes": Array [
                "visa",
                "mastercard",
              ],
            },
            "label": true,
            "position": 2,
            "symbol": "creditcard",
          },
          "directtransfer": Object {
            "active": false,
            "position": 6,
            "symbol": "directtransfer",
          },
          "ideal": Object {
            "active": false,
            "position": 17,
            "symbol": "ideal",
          },
          "klarna_finance": Object {
            "active": false,
            "label": true,
            "position": 16,
            "symbol": "klarna",
          },
          "klarna_invoice": Object {
            "active": false,
            "label": true,
            "position": 15,
            "symbol": "klarna",
          },
          "moneyorder": Object {
            "active": true,
            "label": true,
            "position": 7,
            "symbol": "moneyorder",
          },
          "paypal": Object {
            "active": true,
            "position": 1,
            "symbol": "paypal",
          },
          "santander": Object {
            "active": false,
            "position": 8,
            "symbol": "",
          },
          "voucherPayment": Object {
            "active": true,
            "label": true,
            "position": 12,
            "symbol": "voucher",
          },
        },
      },
    },
    "defaults": Object {
      "development": Object {
        "klarna": Object {
          "baseUri": "https://checkout.testdrive.klarna.com",
        },
      },
      "production": Object {
        "klarna": Object {
          "active": false,
          "baseUri": "https://checkout.klarna.com",
          "confirmationUri": "/checkout/klarna/confirmation.html",
          "contentType": "application/vnd.klarna.checkout.aggregated-order-v2+json",
          "fetchUri": "/checkout/orders/",
          "merchantId": "2468",
          "ordersName": "klarna_checkout",
          "pushUri": "/checkout/klarna/confirm/klarnacheckout?klarna_order={checkout.order.uri}",
          "sharedSecret": "ryckZqFxB75WQ3o",
        },
        "payment": Object {
          "billpay": Object {
            "active": true,
            "label": true,
            "position": "4",
            "symbol": "billpay",
          },
          "billpay_invoice": Object {
            "active": true,
            "label": true,
            "position": 3,
            "symbol": "billpay",
          },
          "billpay_paylater": Object {
            "active": true,
            "label": true,
            "position": 5,
            "symbol": "paylater",
          },
          "cash_on_delivery": Object {
            "active": true,
            "label": true,
            "position": 9,
            "symbol": "cash_on_delivery",
          },
          "creditcard": Object {
            "active": true,
            "config": Object {
              "availableTypes": Array [
                "visa",
                "mastercard",
              ],
            },
            "label": true,
            "position": 2,
            "symbol": "creditcard",
          },
          "directtransfer": Object {
            "active": true,
            "position": 6,
            "symbol": "directtransfer",
          },
          "ideal": Object {
            "active": false,
            "position": 17,
            "symbol": "ideal",
          },
          "klarna_finance": Object {
            "active": false,
            "label": true,
            "position": 16,
            "symbol": "klarna",
          },
          "klarna_invoice": Object {
            "active": false,
            "label": true,
            "position": 15,
            "symbol": "klarna",
          },
          "moneyorder": Object {
            "active": true,
            "label": true,
            "position": 7,
            "symbol": "moneyorder",
          },
          "paypal": Object {
            "active": true,
            "position": 1,
            "symbol": "paypal",
          },
          "santander": Object {
            "active": false,
            "position": 8,
            "symbol": "",
          },
          "voucherPayment": Object {
            "active": true,
            "label": true,
            "position": 12,
            "symbol": "voucher",
          },
        },
        "stepStyle": "multi",
        "stepperNav": true,
        "steps": Object {
          "0": Object {
            "inNav": false,
            "name": "Cart",
            "pay": false,
          },
          "1": Object {
            "inNav": false,
            "loggedIn": Object {
              "id": "1",
              "inNav": true,
              "label": "checkout_address",
              "name": "Address",
            },
            "name": "Step1",
            "pay": false,
          },
          "2": Object {
            "id": "2",
            "inNav": true,
            "label": "checkout_payment",
            "name": "Payment",
            "pay": true,
          },
          "3": Object {
            "id": "3",
            "inNav": true,
            "label": "checkout_overview",
            "name": "Overview",
            "pay": false,
          },
          "4": Object {
            "inNav": false,
            "name": "Confirmation",
            "pay": false,
          },
        },
      },
      "staging": Object {
        "klarna": Object {
          "baseUri": "https://checkout.testdrive.klarna.com",
        },
      },
    },
  },
  "config": Object {
    "bkbe": Object {
      "production": Object {
        "colors": Object {
          "DE": Array [
            "test",
            "grau",
            "grün",
            "orange",
            "pink",
            "braun",
            "rot",
            "lila",
            "blau",
            "weiß",
            "schwarz",
            "transparent",
            "oliv",
            "türkis",
            "gold",
            "silber",
            "bunt",
            "petrol",
          ],
        },
        "country": Object {
          "21": Object {
            "addressFormatId": 5,
            "countryName": "België",
            "isoCode2": "BE",
            "isoCode3": "BEL",
            "taxRates": Object {
              "1": 21,
              "2": 6,
            },
          },
        },
        "currency": Object {
          "positionSymbol": 0,
          "thousand_separator": "",
        },
        "googleSiteVerification": "yBAco_6L0d1XISkO-SFPmffmeXzrDiNJdsycoCxoYEA",
        "moneyOrderInformation": Object {
          "bank": "Südwestbank AG Stuttgart",
          "bic": "SWBSDESSXXX",
          "iban": "DE79600907000640267041",
          "payee": "Internetstores GmbH",
          "reference": "Order number",
        },
      },
    },
    "defaults": Object {
      "production": Object {
        "additional_info": null,
        "checkout2": Object {
          "enabled": true,
          "klarna": false,
        },
        "colors": Object {
          "DE": Array [
            "beige",
            "gelb",
            "grau",
            "grün",
            "orange",
            "pink",
            "braun",
            "rot",
            "lila",
            "blau",
            "weiß",
            "schwarz",
            "transparent",
            "oliv",
            "türkis",
            "gold",
            "silber",
            "bunt",
            "petrol",
          ],
          "DK": Array [
            "beige",
            "gul",
            "grå",
            "grøn",
            "orange",
            "pink",
            "brun",
            "rød",
            "violet",
            "blå",
            "hvid",
            "sort",
            "gennemsigtig",
            "oliven",
            "turkis",
            "guld",
            "sølv",
            "farverig",
            "petroleumsgrøn",
          ],
          "EN": Array [
            "beige",
            "yellow",
            "grey",
            "green",
            "orange",
            "pink",
            "brown",
            "red",
            "purple",
            "blue",
            "white",
            "black",
            "transparent",
            "olive",
            "turquoise",
            "gold",
            "silver",
            "colourful",
            "teal",
          ],
          "ES": Array [
            "beige",
            "amarillo",
            "gris",
            "verde",
            "naranja",
            "rosa",
            "marrón",
            "rojo",
            "violeta",
            "azul",
            "blanco",
            "negro",
            "transparente",
            "Oliva",
            "Turquesa",
            "Dorado",
            "Plateado",
            "Multicolor",
            "Azul petróleo",
          ],
          "FI": Array [
            "beige",
            "keltainen",
            "harmaa",
            "vihreä",
            "oranssi",
            "vaaleanpunainen",
            "ruskea",
            "punainen",
            "violetti",
            "sininen",
            "valkoinen",
            "musta",
            "läpinäkyvä",
            "oliivi",
            "turkoosi",
            "kulta",
            "hopea",
            "monivärinen",
            "petrooli",
          ],
          "FR": Array [
            "beige",
            "jaune",
            "gris",
            "vert",
            "orange",
            "rose",
            "marron",
            "rouge",
            "violet",
            "bleu",
            "blanc",
            "noir",
            "transparent",
            "olive",
            "turquoise",
            "Or",
            "argent",
            "Multicol",
            "ore",
            "Bleu pétrole",
          ],
          "IT": Array [
            "beige",
            "giallo",
            "grigio",
            "verde",
            "arancione",
            "rosa",
            "marrone",
            "rosso",
            "viola",
            "blu",
            "bianco",
            "nero",
            "trasparente",
            "verde oliva",
            "turchese",
            "oro",
            "argento",
            "colorato",
            "petrolio",
          ],
          "NL": Array [
            "beige",
            "geel",
            "grijs",
            "groen",
            "oranje",
            "roze",
            "bruin",
            "rood",
            "violet",
            "blauw",
            "wit",
            "zwart",
            "transparant",
            "olijf",
            "turquoise",
            "goud",
            "zilver",
            "bont",
            "petrol",
          ],
          "NO": Array [
            "beige",
            "Gul",
            "Grå",
            "Grønn",
            "Orange",
            "Rosa",
            "Brun",
            "rød",
            "lilla",
            "Blå",
            "Hvit",
            "Svart",
            "Transparent",
            "oliven",
            "turkis",
            "gull",
            "sølv",
            "Fargerik",
            "Bensin",
          ],
          "PL": Array [
            "beige",
            "żółty",
            "szary",
            "zielony",
            "pomarańczowy",
            "różowy",
            "brązowy",
            "czerwony",
            "fioletowy",
            "niebieski",
            "biały",
            "czarny",
            "przezroczysty",
            "oliwkowy",
            "turkusowy",
            "złoty",
            "srebrny",
            "kolorowy",
            "petrol",
          ],
          "SV": Array [
            "beige",
            "gelb",
            "grå",
            "grön",
            "orange",
            "pink",
            "brun",
            "röd",
            "violett",
            "lila",
            "blå",
            "vit",
            "svart",
            "transparent",
            "färglös",
            "oliv",
            "turkos",
            "guld",
            "silver",
            "flerfärgad",
            "Petrol",
          ],
        },
        "country": Object {
          "105": Object {
            "addressFormatId": 6,
            "countryName": "Ireland",
            "isoCode2": "IE",
            "isoCode3": "IRL",
            "taxRates": Object {
              "1": 23,
              "2": 13.5,
            },
          },
          "107": Object {
            "addressFormatId": 1,
            "countryName": "Italia",
            "isoCode2": "IT",
            "isoCode3": "ITA",
            "taxRates": Object {
              "1": 20,
              "2": 10,
            },
            "zipRegexPattern": "^[0-9]{5}$",
          },
          "124": Object {
            "addressFormatId": 1,
            "countryName": "Luxemburg",
            "isoCode2": "LU",
            "isoCode3": "LUX",
            "taxRates": Object {
              "1": 19,
              "2": 7,
            },
            "zipRegexPattern": "^(L\\\\s*(-|—|–))\\\\s*?[\\\\d]{4}$",
          },
          "14": Object {
            "addressFormatId": 5,
            "countryName": "Österreich",
            "isoCode2": "AT",
            "isoCode3": "AUT",
            "taxRates": Object {
              "1": 20,
              "2": 10,
            },
            "zipRegexPattern": "^[0-9]{4}$",
          },
          "150": Object {
            "addressFormatId": 1,
            "countryName": "Niederlande",
            "isoCode2": "NL",
            "isoCode3": "NLD",
            "taxRates": Object {
              "1": 21,
              "2": 6,
            },
            "zipRegexPattern": "^[1-9][0-9]{3}\\\\s?[a-zA-Z]{2}$",
          },
          "160": Object {
            "addressFormatId": 1,
            "countryName": "Norge",
            "isoCode2": "NO",
            "isoCode3": "NOR",
            "taxRates": Object {
              "1": 25,
              "2": 12,
            },
            "zipRegexPattern": "^[0-9]{4}$",
          },
          "173": Object {
            "addressFormatId": 5,
            "countryName": "Polen",
            "isoCode2": "PL",
            "isoCode3": "POL",
            "taxRates": Object {
              "1": 23,
              "2": 8,
            },
            "zipRegexPattern": "^[0-9]{2}-[0-9]{3}$",
          },
          "195": Object {
            "addressFormatId": 5,
            "countryName": "Spanien",
            "isoCode2": "ES",
            "isoCode3": "ESP",
            "taxRates": Object {
              "1": 21,
              "2": 10,
            },
            "zipRegexPattern": "^[0-9]{5}$",
          },
          "203": Object {
            "addressFormatId": 1,
            "countryName": "Schweden",
            "isoCode2": "SE",
            "isoCode3": "SWE",
            "taxRates": Object {
              "1": 25,
              "2": 12,
            },
            "zipRegexPattern": "^\\\\d{3}\\\\s?\\\\d{2}$",
          },
          "204": Object {
            "addressFormatId": 5,
            "countryName": "Schweiz",
            "isoCode2": "CH",
            "isoCode3": "CHE",
            "taxRates": Object {
              "1": 8,
              "2": 2.5,
            },
            "zipRegexPattern": "^[0-9]{4}$",
          },
          "21": Object {
            "addressFormatId": 5,
            "countryName": "Belgien",
            "isoCode2": "BE",
            "isoCode3": "BEL",
            "taxRates": Object {
              "1": 21,
              "2": 6,
            },
            "zipRegexPattern": "^[0-9]{4}$",
          },
          "222": Object {
            "addressFormatId": 5,
            "countryName": "United Kingdom",
            "isoCode2": "GB",
            "isoCode3": "GBR",
            "taxRates": Object {
              "1": 20,
              "2": 5,
            },
            "zipRegexPattern": "^[a-zA-Z]{1}[0-9a-zA-z]{1,3} [0-9]{1}[a-zA-Z]{2}",
          },
          "57": Object {
            "addressFormatId": 1,
            "countryName": "Daenemark",
            "isoCode2": "DK",
            "isoCode3": "DNK",
            "taxRates": Object {
              "1": 25,
              "2": 25,
            },
            "zipRegexPattern": "^[0-9]{3,4}$",
          },
          "72": Object {
            "addressFormatId": 1,
            "countryName": "Finnland",
            "isoCode2": "FI",
            "isoCode3": "FIN",
            "taxRates": Object {
              "1": 24,
              "2": 14,
            },
            "zipRegexPattern": "^[0-9]{5}$",
          },
          "73": Object {
            "addressFormatId": 1,
            "countryName": "Frankreich",
            "isoCode2": "FR",
            "isoCode3": "FRA",
            "taxRates": Object {
              "1": 19.6,
              "2": 5.5,
            },
            "zipRegexPattern": "^(F-)?((2[A|B])|[0-9]{2})[0-9]{3}$",
          },
          "81": Object {
            "addressFormatId": 5,
            "countryName": "Deutschland",
            "isoCode2": "DE",
            "isoCode3": "DEU",
            "taxRates": Object {
              "1": 19,
              "2": 7,
            },
            "zipRegexPattern": "^[0-9]{5}$",
          },
        },
        "currency": Object {
          "class": "euro",
          "code": "EUR",
          "decimal_separator": ",",
          "decimals": 2,
          "euro_conversion_factor": 1,
          "positionSymbol": 0,
          "prefix": "EUR",
          "round": "math",
          "suffix": ",-",
          "symbol": "€",
          "text": "EUR",
          "thousand_separator": ".",
          "value": 1,
        },
        "insurance": Object {
          "enabled": false,
          "excluded_group_ids": Array [
            5121,
            53,
            468,
            383,
            384,
            512,
            392,
            393,
          ],
        },
        "newsletter": Object {
          "interestsCount": 10,
        },
        "packstations": Object {
          "enabled": false,
        },
        "productPriceReduction": Object {
          "reductionPercentMinimumThreshold": 3,
          "reductionPercentShowingThreshold": 10,
        },
        "product_max_add_to_cart": 99,
        "product_new": Object {
          "badge_new_time": 2419200,
        },
        "show_sold_out_in_category": Array [
          1,
          5,
          9,
          19,
          33,
          39,
        ],
        "warranty": Object {
          "carbonBikes": Array [
            366645,
            366644,
            366643,
            387207,
            387208,
            387209,
            387210,
            469447,
            469448,
            469449,
            469450,
            469451,
          ],
        },
      },
    },
  },
  "forms_customer": Object {
    "bkit": Object {
      "production": Object {
        "customerData": Array [
          Object {
            "label": "form_label_gender",
            "name": "gender",
            "required": true,
            "tabIndex": 1,
            "test": 2,
            "type": "gender",
          },
          Object {
            "constraints": Array [
              Object {
                "min": 2,
                "minMessage": "form_firstname_error",
                "type": "Length",
              },
            ],
            "label": "form_label_first_name",
            "name": "firstName",
            "required": true,
            "tabIndex": 2,
            "type": "text",
          },
          Object {
            "constraints": Array [
              Object {
                "min": 2,
                "minMessage": "form_lastname_error",
                "type": "Length",
              },
            ],
            "label": "form_label_last_name",
            "name": "lastName",
            "required": true,
            "tabIndex": 3,
            "type": "text",
          },
          Object {
            "constraints": Array [
              Object {
                "message": "form_taxnumber_error",
                "type": "CodiceFiscale",
              },
            ],
            "label": "form_label_taxnumber",
            "name": "taxNumber",
            "required": false,
            "tabIndex": 4,
            "type": "text",
          },
          Object {
            "constraints": Array [
              Object {
                "message": "form_phone_error",
                "type": "Pattern",
              },
            ],
            "label": "form_label_telephone",
            "required": true,
            "tabIndex": 5,
            "type": "telephone",
          },
          Object {
            "label": "form_label_birthday",
            "name": "birthday",
            "required": true,
            "tabIndex": 6,
            "type": "date",
          },
        ],
      },
    },
    "defaults": Object {
      "production": Object {
        "customerData": Array [
          Object {
            "label": "form_label_gender",
            "name": "gender",
            "required": true,
            "tabIndex": 1,
            "test": "test",
            "type": "gender",
          },
          Object {
            "constraints": Array [
              Object {
                "min": 2,
                "minMessage": "form_firstname_error",
                "type": "Length",
              },
            ],
            "label": "form_label_first_name",
            "name": "firstName",
            "required": true,
            "tabIndex": 2,
            "type": "text",
          },
          Object {
            "constraints": Array [
              Object {
                "min": 2,
                "minMessage": "form_lastname_error",
                "type": "Length",
              },
            ],
            "label": "form_label_last_name",
            "name": "lastName",
            "required": true,
            "tabIndex": 3,
            "type": "text",
          },
          Object {
            "constraints": Array [
              Object {
                "message": "form_phone_error",
                "pattern": "^[0-9\\\\-+.,/() ]{2,23}$",
                "type": "Pattern",
              },
              Object {
                "message": "form_taxnumber_error",
                "type": "CodiceFiscale",
              },
            ],
            "label": "form_label_telephone",
            "name": "telephone",
            "required": true,
            "tabIndex": 4,
            "type": "telephone",
          },
          Object {
            "label": "form_label_birthday",
            "name": "birthday",
            "required": true,
            "tabIndex": 5,
            "type": "date",
          },
        ],
        "customerEmail": Array [
          Object {
            "constraints": Array [
              Object {
                "message": "form_mail_error_notvalid",
                "type": "IsEmailValid",
              },
              Object {
                "message": "form_mail_error",
                "type": "IsBlacklisted",
              },
              Object {
                "message": "form_mail_error_alreadyused",
                "type": "IsUniqueUsername",
              },
            ],
            "label": "form_label_email_new",
            "name": "email",
            "required": true,
            "tabIndex": 6,
            "type": "email",
          },
          Object {
            "constraints": Array [
              Object {
                "message": "form_mail_error_notvalid",
                "type": "IsEmailValid",
              },
              Object {
                "message": "form_mail_error",
                "type": "IsBlacklisted",
              },
              Object {
                "message": "form_mail_error_alreadyused",
                "type": "IsUniqueUsername",
              },
            ],
            "label": "form_label_email_new_repeat",
            "name": "emailVerify",
            "required": true,
            "tabIndex": 7,
            "type": "email",
          },
        ],
        "customerForgotPassword": Array [
          Object {
            "label": "form_label_email",
            "name": "password_email",
            "required": true,
            "tabIndex": 9,
            "type": "email",
          },
        ],
        "customerLogin": Array [
          Object {
            "label": "form_label_email",
            "name": "login_email",
            "required": true,
            "tabIndex": 1,
            "type": "email",
          },
          Object {
            "label": "password_form_label",
            "name": "login_password",
            "required": true,
            "tabIndex": 2,
            "type": "password",
          },
        ],
        "customerPassword": Array [
          Object {
            "label": "customer_password_old",
            "name": "password",
            "required": true,
            "type": "password",
          },
          Object {
            "constraints": Array [
              Object {
                "message": null,
                "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
                "type": "Pattern",
              },
            ],
            "hint": "form_hint_password",
            "label": "customer_password_new",
            "name": "passwordNew",
            "required": true,
            "tabIndex": 8,
            "type": "password",
          },
        ],
        "customerRestorePassword": Array [
          Object {
            "constraints": Array [
              Object {
                "message": null,
                "pattern": "^[a-zA-Z0-9_\\\\-.,@\\\\$\\\\/=!?+*():;#%&§]{5,32}$",
                "type": "Pattern",
              },
            ],
            "hint": "form_hint_password",
            "label": "customer_password_new",
            "name": "password",
            "required": true,
            "tabIndex": 10,
            "type": "password",
          },
        ],
      },
    },
  },
}
`;
